# mosaic

./: .gitignore  Dockerfile  README.md  blog_post.md  pyproject.toml
examples/tabula_sapiens/: Dockerfile  run_gcp.sh  setup_data.py  train.py
gcp/: README.md  setup.sh  submit_job.py  train_gcp.py
mosaic/: __init__.py  attention.py  benchmark.py  context.py  hierarchical.py  spec.py
mosaic/backends/: __init__.py  composed.py  local.py  mesh2d.py  mesh3d.py  ring.py
mosaic/examples/: __init__.py  nanotabpfn.py
mosaic/integrations/: __init__.py  huggingface.py
mosaic/tests/: __init__.py  test_attention.py  test_context.py  test_hierarchical.py
